working on assets and shared community

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -738,9 +738,11 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 #### Addressing code syntax errors
 
-Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
+Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use [@bau_learnable_2017; @resnick_scratch:_2009]. This process reduced possibilities for syntax errors (see glossary) and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
-In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently (how much?) observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
+In glitch such code syntax errors are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently [how much from video data]  observed the non-coding peer notice and point out the red dot, thus preventing further errors.
+
+While block coding offers significant advantages (GL)in preventing syntax errors, in a comparison to text coding approaches, Bau and colleagues summarise the inherent disadvantages [@bau_learnable_2017]. These include: block coding can take of a lot of the users screen; making small changes to code can be tricker in blocks than text; block coding can complicate remote collaboration and version control; searching for code structures is simpler using text code. While these disadvantages are more applicable to more advanced users, they remain relevant to my general goal of working with an environment aligned to professional practices.
 
 
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
@@ -751,22 +753,26 @@ In glitch such code syntax errors (GL) are highlighted via a red dot provided a 
 
 #### Distributed vs. self-contained approaches to asset creation
 
-One element of code project creation is creating and managing assets. Some novice tools, following the pioneering example of Scratch,  provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data.
+A key element of game creation is the creation and management of graphical and audio assets. Many coding tools for novices provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets. While there are practical limits to the audio and graphical authoring capabilities of tools like Scratch [@payne2019music], such self-contained approached reduce possibility for compounding errors and complexity caused by the compatibility of file formats and migration and management of external asset files.
 
 <!-- In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program.  -->
 
-In P1, I used a variety of graphical and audio tools including:  Piskel to create sprite characters; Scratch to create backgrounds; Audacity and freesound.org record and edit audio for effects; Sonic Pi for background music; and Bxr online tool for sound effects. Participants would then save assets in a compatible format, upload them to the code playground, and link the file using a line of code.
+In P1 I observed participant showing a high motivation to incorporate assets created in a diverse set of graphical and audio tools, often struggling to overcome the technical challenges in the process. Responding to the enthusiasm of participants in asset creation, I had introduced the following tools to participants including:   
 
- - There is digital literacy here
- - also a tension with forward momentum
- - there is also strong motivation in incorporating image assets - linked to Fok
+- Piskel - a graphical editor used to create pixel art sprite characters;
+- Audacity - a desktop based application to record and edit audio using audio effects and filters like delay and echo;
+- freesound.org - an open repository of audio files which could be downloaded, used directly or altered using Audacity;
+- Sonic Pi - an education music application allowing the creation of music using text coding;
+- Bfxr & jsfxr - web based tools to create sound effects aimed at game production;
+- Scratch - while scratch was not use for game production, I encouraged participants to use its intuative graphical editor to create backgrounds for the game;
 
-To find middle ground, in P2 and P3 I reduced the number of tools suggested when creating assets. The implications of working in this more porous learning space are explored in the later discussion section.
+Not all participants would use all of these tools; rather suggested their use responsively based on their immediate need. However, similar patterns of use emerged. Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main javascript game file at the relevant line of code.
 
-While in my design, there is greater friction caused by the process of migrating assets, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty caused by the unfamiliar environment and processes.
+There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multi-media creations [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. In line with these findings, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, the sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes. The process was successful in many in motivating the acquisition and use of diverse and authentic digital literacy skills.
 
-
-
+Despite these benefits, I was concerned that in P1 the diversity of asset related approaches had caused a complexity and distraction from the leading activity of game making. To address this, in P2 I reduced the number of tools suggested when creating assets. The implications of working in this more porous learning space are explored in the later discussion section.
+ARE THEY OR DOES IT NEED TO BE HERE?
+AUTHENTICITY - RESTRICTED PLAYGROUND
 
 <!-- I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
 
@@ -810,9 +816,11 @@ The a game template served to remove technical barriers to getting immediate fee
 
 NOTE - REMOVE SHARED COMMMUNITY AS NOT VERY RELEVANT FOR THIS PROJECT?
 
-As explored in the LT, Code playgrounds address issues of complexity of web coding part by providing a self contained server. However for novice  users the web location still also offers friction in terms of digital literacy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
+Another common feature of novice coding tools is the use of a gallery of creations, in a way which aligns with the potential for community-based learning strongly advocated by Gee and Ito [@gee_what_2003; @ito_hanging_2010]. The ability to easily remix community projects, supports the process of becoming familiar with, and using other projects or approaches as a base, thus supporting the use and modify stage of the UMC pedagogy (see glossary). Remixing also informs professional practice [@kotsopoulos_pedagogical_2017-1] in the form of distributed revision control tools such. A practice known as code forking.
 
-The ability to easily remix community projects, supports the process of becoming familiar with, and using other projects or approaches as a base. This is not just a negative copying function but one that encourages playful curiosity. It is also a foundation of professional practice [@kotsopoulos_pedagogical_2017-1].  The concept has become embedded in distributed revision control tools such as git as forking. (DEVELOP THE LINK WITH INTERNET / REMIX CULTURE?). The remix process also aligns with the use and modify stage of the UMC pedagogy explored in the LR.
+As explored in the LT, Code playgrounds address issues of complexity of web coding environment and practices of forking by providing access to a self-contained server structure from within a browser. However for novice  users the web location still also offers friction in terms of digital literacy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
+
+In this program, while participants where not encouraged to browse the creations of a wider web-based community, they were encouraged to view and interact with fellow participants projects. 
 
 Practically, in novice coding communities, this is encouraged by the use of community galleries and buttons encouraging. In Scratch this is seen in buttons named see inside and remix when viewing projects. Similarly both the Thimble (used in P1) and Glitch (used in P2 and P3) prominently featured remix buttons and view source buttons in the community interface. The shared community element on the other hand was quite different for glitch due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote with existing online communities but to focus instead on internal sharing of projects between the group.
 
