--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1045,9 +1045,7 @@ by Mozilla and the Phaser developers. -->
 
 
 #### Code snippet examples
-To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements.
-
-As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice.These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices.
+To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices.
 
 I initially encouraged participants to search within these examples, and authentic documentation documentation and help forums  used by both professional and amateur users of the Phaser javascript library [^11]. Unfortunately, when participants began this process significant additional tensions and confusions emerged. As with many developer created documentation, these demonstrated the code constructs in isolation rather than in the context of any particular game.
 
@@ -1055,24 +1053,17 @@ In P1 I observed participants struggling with confusions about code structures a
 
 Initially, I responded by creating one off documents with the relevant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory as the documents were disconnected in a google drive document with no navigation to link between the game or between resources. It was not clear at this point how best to signpost how the code listed fit within the existing structure.
 
-To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality.
+<!-- To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality. My rationale was that each pattern added builds familiarity with the code structure. Feedback from P1 and video evidence as in Toby's proficiency supports this observation. -->
 
-A GAP HERE
 
-My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
+#### Structuring step by step, self-contained tutorials
 
-#### Stand-alone tutorials
-
-For each code example I created a text based step-by-step documentation. Each guide was printed out for sessions and readers were encouraged to tackle them in any order. The extract outlining the use of physical maps above shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests.
-
-As the programme developed I took greater care over the form of the tutorials and started to collect them into a collection of chapters of an online book.
+For each code example I created a text based step-by-step documentation. Each guide was printed out for sessions and readers were encouraged to tackle them in any order. The extract outlining the use of physical maps above shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests. As the programme developed I took greater care over the form of the tutorials and started to collect them into a collection of chapters of an online book.
 
 <!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
 
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
-
-#### Organising tutorials into a linear structure, specifically in the form of a book
 
 While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x). However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
 
@@ -1089,7 +1080,7 @@ Interestingly, the online menus was not used by participants in any regular or c
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
 
-#### Structuring and using a collection of game design patterns
+#### Theming the a collection of game design patterns to aid navigation
 
 <!-- **Tensions and related to navigation of various documentations sources** -->
 
@@ -1100,12 +1091,7 @@ Interestingly, the online menus was not used by participants in any regular or c
  It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
  -->
 
-
-I initially listed code examples in a shared google document and printed out self-contained chapters. While the code snippet and text resources were developed in response to the participant conflict described above they introduced new tensions.
-
-Specifically, I observed users failing or struggling to find the right resources online. I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created.
-
-Learning resources linked to game design patterns were presented in a grid format with colour-coded images that focused on the player experience rather than underlying coding constructs. (MOVE DOWN?)
+I initially listed code examples in a shared google document and printed out self-contained chapters. While the code snippet and text resources were developed in response to the participant conflict described above they introduced new tensions. Specifically, I observed users failing or struggling to find the right resources online. I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created. Learning resources linked to game design patterns were presented in a grid format with colour-coded images that focused on the player experience rather than underlying coding constructs.
 
 ![Pattern Collection](./Pictures/pattern_collection_1.png){width=95%}
 
@@ -1129,7 +1115,7 @@ The process of sketching, revising and re-sketching the elements led me to conne
 
 <!-- NOTE SOME MOVED TO NEXT CHAPTER -->
 
-In grouping the GDP I drew on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. Schnell's detailed analysis of tens of game elements presented as design lenses was too complex for this audience. Instead, I adapted a simplified introductory framework developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games. The framework formed a base for activities to build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
+In grouping the GDP I drew on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. Schnell's detailed analysis of tens of game elements presented as design lenses was too complex for this audience. Instead, I adapted a simplified introductory framework developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games [@cornish_game_2018; @institute_of_play_gamestar_nodate].
 
 - **SPACE:** Where the game takes place.
 - **GOAL:** What is the objective of the game? What are you trying to do?
@@ -1137,25 +1123,19 @@ In grouping the GDP I drew on academic and professional interpretations of game 
 - **MECHANICS:** What actions take place in the game. What are the verbs involved?
 - **RULES:** What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
 
-I related this simple categorisation the emerging list of requests for game features made by my participants. I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _System and Challenge_ patterns. These explore at how different elements interact to create challenge in the game.
+The developers used the framework youth game jams to help participants develop their implicit knowledge of game design concepts in to explicit share vocabulary before engaging in digital making via collaborative analysis of common games. In P1 asked participants to undertake a similar activity after playing retro arcade games [included in appendix]. I related this simple categorisation the emerging list of requests for game features made by my participants. I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _system and challenge_ patterns. These explore at how different elements interact to create challenge in the game.
 
 <!-- I then took the existing list of game elements that have been identified by students and categorised them based on a blend of two frameworks. -->
 
 <!-- I made some simplifications and adaption to increase accessibility for non-professional and young people. For example, the term of aesthetics is very wide and suited simplification _game polish_. -->
 
-![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
+![Game Design Themes](./Pictures/four_gdp_themes.png){width=55%}
 
 In retrospect, I noted that this categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The process of theming the patterns by function and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
 
-To support the process of building on implicit knowledge of game patterns via collaborative analysis I drew on the framework above to create a worksheet that I asked participants to complete on the first session after playing games.
-
+While time consuming, the process of aligning documentation, code snippets with more general concepts of game analysis, served to simplify the navigation of documentation. The guiding principle is that key affordances of the  supporting secondary stimuli are designed to closely align with the objectives of leading activity at the predominant scope of activity.
 
 The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
-
-
-The section has addressed the complex conflict of participants in accessing help to overcome smaller blocks to the progress.
-
-CREATE A BETTER LINK HERE TO MARK TRANSITION.
 
 
 <!--
